Code Review
Updated to remove entity and reuse existing medication order entity. Updated unit testing for coverage and various other small details.